--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ include = [{ path = "augmentor/warping/**/*.so", format = "wheel" }]
 python = ">=3.9,<4"
 matplotlib = "^3.6.2"
 scikit-image = "^0.24.0"
-imgaug = "^0.4.0"
+opencv-python = "^4.10.0.84"
 
 
 [tool.poetry.group.test.dependencies]
